# LaanCare

./: .env  .env.example  .gitignore  app.py  railway.json  register-flow-line-oa.md  requirements.txt
OCR_module/: api_doc.md  drug_knowledge.json  main.py  medicines.db  output.json  pyproject.toml  requirements.txt
OCR_module/scratch/: test_cases.py  test_interaction.py
OCR_module/static/: index.html  script.js  style.css
care-bot-2/: .env  index.html  package-lock.json  package.json
care-bot-2/backend/: assessments.db  main.py
care-bot-2/src/: App.jsx  index.css  questions.js
chat-symtom/: README.md
chat-symtom/Symptoms/: symptom_group_01.md  symptom_group_02.md  symptom_group_04.md  symptom_group_08.md  symptom_group_09.md  symptom_group_12.md  symptom_group_13.md  symptom_group_15.md  symptom_group_17.md  symptom_group_18.md  symptom_group_20.md  symptom_group_21.md
chat-symtom/app/: __init__.py  db.py  engine.py  env.py  server.py
drugs-interaction/: README.md  app.py  high_risk_medication_group_interactions.csv
src/: __init__.py  api.py  appointment_alerts.py  carebot.py  config.py  drug_interaction.py  flex.py  medguard_ocr.py  medications_database.csv  medicine_alerts.py  ocr_engine.py  storage.py  symptom_db.py  symptom_ems_loader.py  symptom_engine.py  symptom_gemini_client.py  symptom_openai_client.py
static/: carebot.css  medicine.css  register.css  report.css  symptom_chat.css  symptom_chat.js
templates/: carebot.html  medicine_register.html  medicine_success.html  register.html  register_success.html  report.html  symptom_chat.html
(+22 files in other folders)
