[project]
name = "ocr-module"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.0.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
